force-app/main/default/objects/purecloud__PureCloud_Phone_Field__c/purecloud__PureCloud_Phone_Field__c.object-meta.xml
<CustomObject>
    <label>Genesys Cloud Phone Field</label>
    <nameField>
        <label>Genesys Cloud Phone Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Cloud Phone Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>