force-app/main/default/objects/purecloud__PureCloud_Phone_Field__c/fields/purecloud__Order__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Order__c</fullName>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>