force-app/main/default/objects/purecloud__PureCloud_Phone_Field__c/fields/purecloud__Phone_Column_Name__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Phone_Column_Name__c</fullName>
    <label>Phone Column Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>