force-app/main/default/objects/purecloud__PureCloud_Phone_Field__c/fields/purecloud__Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Phone_Type__c</fullName>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Cell</fullName>
            </value>
            <value>
                <fullName>Daytime</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>